--- a/囗/Readme
+++ b/囗/Readme
@@ -1,1 +1,21 @@
+三 three
+維 maintain, preserve, safeguard
+圖 diagram; chart, map, picture
+紙 paper
 
+代 replace, replacement (of person or generation >); era, generation
+碼 number, numerals; yard; symbol
+段 section, piece, division	 		
+庫 armory, treasury, storehouse
+
+等 rank, grade; wait; equal; 'etc.'
+將 will, going to, future; general
+包 wrap, pack, bundle; package
+含 hold in mouth; cherish; contain
+
+在 be at, in, on; consist in, rest
+此 this, these; in this case, then
+目 eye; look, see; division, topic
+錄 copy, write down, record
+
+中 central; center, middle; in the midst of; hit (target); attain
